--- a/ProxyPlaying-Backend/src/main/resources/application.properties
+++ b/ProxyPlaying-Backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.web.cors.allow-credentials=true
+spring.web.cors.allowed-origins=http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,HEAD,OPTIONS
+spring.web.cors.allowed-headers=*
